[package]
name = "fltk-table"
version = "0.1.0"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>"]
edition = "2018"
description = "A smart table widget for fltk-rs"
repository = "https://github.com/fltk-rs/fltk-table"
documentation = "https://docs.rs/fltk-table"
keywords = ["gui", "ui", "widgets", "bindings", "graphics"]
categories = ["gui"]
readme = "README.md"
license = "MIT"

[dependencies]
fltk = "1.2"