[package]
name = "fltk-table"
version = "0.3.0"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>"]
edition = "2021"
description = "A smart table widget for fltk-rs"
repository = "https://github.com/fltk-rs/fltk-table"
documentation = "https://docs.rs/fltk-table"
keywords = ["gui", "ui", "widgets", "bindings", "graphics"]
categories = ["gui"]
readme = "README.md"
license = "MIT"
exclude = ["./examples"]

[dependencies]
fltk = "1.4"

[[test]]
name = "thread"
path = "tests/thread.rs"
harness = false